--- a/application/src/main/webapp/css/components/chat.less
+++ b/application/src/main/webapp/css/components/chat.less
@@ -112,7 +112,7 @@
   }
 }
 
-.uiLeftContainerArea .uiIconArrowDownMini:before {
+.uiChatLeftContainer .uiIconArrowDownMini:before {
   color: @leftContainerTextColor;
 }
 .uiIconArrowDownMini:before {
